--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="js/phaser.min.js"></script>
   <script src="js/phaser-virtual-joystick.min.js"></script>
   <script src="js/ScreenShake.js"></script>
+  <script src="js/box2d-plugin.js"></script>
 
   <!-- Load States -->
   <script src="js/states/menu.js"></script>
