--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Ludum Dare 3</title>
   </head>
-
+  <img src="banner.png">
   <div id="game"></div>
   <!-- Load engine and plugins -->
   <script src="js/phaser.min.js"></script>
