--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/box2d-plugin.js"></script>
   <script src="js/easystar-0.2.1.min.js"></script>
   <script src="js/phaser_pathfinding-0.2.0.min.js"></script>
+  <script src="js/pathfinding.js"></script>
 
   <!-- Load States -->
   <script src="js/states/menu.js"></script>
