Added win and loss states

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
   <!-- Load States -->
   <script src="js/states/menu.js"></script>
   <script src="js/states/maingame.js"></script>
+  <script src="js/states/win.js"></script>
+  <script src="js/states/loss.js"></script>
 
   <!-- Start Game -->
   <script>
     var game = new Phaser.Game(480*2, 480*2 + 120, Phaser.AUTO, "game");
     game.state.add("MainGame", MainGame);
+    game.state.add("loss", Loss);
+    game.state.add("win", Win);
     game.state.add('Menu', Menu, true);
   </script>
 </html>
