--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="js/states/maingame.js"></script>
   <script src="js/states/win.js"></script>
   <script src="js/states/loss.js"></script>
+  <script src="js/states/instr.js"></script>
 
   <!-- Start Game -->
   <script>
@@ -26,6 +27,7 @@
     game.state.add("MainGame", MainGame);
     game.state.add("loss", Loss);
     game.state.add("win", Win);
+    game.state.add("instr", Instr);
     game.state.add('Menu', Menu, true);
   </script>
 </html>
